welcome.lessons.welcome.bat.bool1.SumDouble.scala.error
sumDouble:3: error: type mismatch;
 found   : Unit
 required: Integer
     if ( a == b ) return (a*a*a*a);}
     ^